2001-10-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* analysis-tools.glade : Remove unused dialogs.

2001-10-31  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* analysis-tools.glade, dialog-analysis-tools.c: Added `Help'
	button to the tool selection dialog.

	* advanced-filter.glade, dialog-advanced-filter.c: Added `Help'
	button.

	* autocorrect.glade, dialog-autocorrect.c: Added `Help' button.

2001-10-31  Jody Goldberg <jgoldberg@home.com>

	* dialog-formula-guru.c (dialog_formula_guru) : remove the debug spew.
	(formula_guru_arg_new) : no need to call editable enters.  We do it
	  manually.

2001-10-30  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62211
	* dialog-cell-format.c (fmt_dialog_impl) : no need to make this modal.
	There will be confusion with multiple-views, but it is manageable.

2001-10-30  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-solver.c : rewritten as a semi-modal guru using the expr-entry
	  widget
	* solver.glade : redesign dialog as semi-modal guru

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.74

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.73

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* dialog-printer-setup.c (do_print_destroy_cb) : warning suppression.

2001-10-28  Jody Goldberg <jgoldberg@home.com>

	* dialog-define-names.c (name_guru_display_scope) : set active on
	  sheet or workbook, don't set TRUE/FALSE on sheet.
	(name_guru_init) : get the wb_scope button.

2001-10-27  Almer S. Tigelaar  <almer@gnome.org>

	* dialog-cell-format.c (validation_style_condition_chain_rebuild): Rename
	to validation_rebuild_validation.
	(validation_rebuild_validation): Also set error style, title and message
	on validation.
	(cb_validation_error_action_deactivate): Don't set error style on
	mstyle directly.
	(cb_validation_operator_deactivate): Adjust for name change.
	(cb_validation_constraint_type_deactivate): Don't rebuild chain from